<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".dialogs.edit_exercise"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView"
    android:background="@drawable/dialog_stroke"
    android:padding="1dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:minWidth="300dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?colorPrimary"
            android:id="@+id/TopBar"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Unlock Pro"
                android:id="@+id/Header"
                android:textColor="?android:textColorPrimaryInverse"
                android:textSize="25dp"
                android:gravity="center"
                android:layout_gravity="center" />

        </FrameLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/options"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Theme_advert_massage"
                android:id="@+id/Message"
                android:layout_gravity="center"
                android:textColor="?android:textColorPrimary"
                android:textSize="15dp"
                android:gravity="center_vertical|center_horizontal"
                android:layout_margin="10dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:src="@drawable/color_themes_promo"
                android:adjustViewBounds="true"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:textColorPrimaryDisableOnly"
            android:id="@+id/divider1"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:weightSum="2"
            android:id="@+id/Buttons">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dialog_button"
                android:onClick="NO">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_thank_you"
                    android:id="@+id/NO"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textColor="?android:textColorPrimary"/>
            </RelativeLayout>

            <FrameLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:id="@+id/divider2"
                android:background="?android:textColorPrimaryDisableOnly"></FrameLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_weight="1"
                android:background="@drawable/dialog_button"
                android:onClick="YES">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unlock_pro"
                    android:id="@+id/YES"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textColor="?android:textColorPrimary"/>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>