<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android.support.design="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground">

    <android.support.v7.widget.Toolbar
        app:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/Theme.AppCompat.Light"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimary"
        android:id="@+id/toolbar"
        android:paddingRight="10dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/icon"
            android:layout_gravity="right"
            android:src="@drawable/test_image"
            android:clickable="true"
            android:onClick="openEditWorkout" />


    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/mainContent"
        android:layout_above="@+id/adView"
        android:layout_below="@+id/toolbar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:id="@+id/message"
            android:layout_centerVertical="true"
            android:textColor="?android:textColorSecondary"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_gravity="center" />

        <sam.gymnotes.DynamicListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/List"
            android:layout_gravity="center_horizontal"
            android:dividerHeight="1dp"
            android:clickable="false"
            android:divider="?android:divider"
            android:layout_below="@+id/topbar"
            android:layout_above="@+id/noteBar"
            android:drawSelectorOnTop="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fabButtons"
            android:layout_gravity="right|bottom"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab2"
                android.support.design:fabSize="mini"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_repeat_black_24dp"
                android:clickable="true"
                android:onClick="repeatLastSetButton"
                android:scaleType="center"
                android:layout_marginLeft="26dp"
                android:tint="?android:textColorPrimaryInverse" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:src="@drawable/ic_add_black_24dp"
                android:onClick="gotoNewSet"
                android:tint="?android:textColorPrimaryInverse"
                android:layout_margin="26dp" />


        </LinearLayout>
    </FrameLayout>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_id"
        android:layout_above="@+id/noteBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </com.google.android.gms.ads.AdView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="?colorPrimary"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="0dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/noteBar"
        android:onClick="openEditNote"
        android:clickable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:id="@+id/textView5"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="?android:textColorPrimaryInverse" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="This is the workout note, it might say I was very tired today or some bullshit like that."
            android:id="@+id/note"
            android:gravity="center"
            android:textColor="?android:textColorPrimaryInverse"
            android:maxLines="6" />
    </LinearLayout>

</RelativeLayout>